--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: MyriadPro;
+    font-weight: thin;
+    src: url("fonts\MyriadPro-Light.otf") format("opentype");
+}
+
+@font-face {
+    font-family: BebasNeue;
+    font-weight: Regular;
+    src: url("fonts\BebasNeue Regular.otf") format("opentype");
+}
+
 body {
   margin: 0;
   padding: 0;
