Market circular button

--- a/src/scenes/Home/components/Compra/styles.css
+++ b/src/scenes/Home/components/Compra/styles.css
@@ -8,5 +8,24 @@
     font-family: 'Bebas Neue';
 
     color: #2C4663;
+}
 
+
+#toMarket {
+    width: 28em;
+    height: 28em;
+    background-color: #E95A24;
+    text-align: center;
+    line-height: 28em;
+    color: white;
+    font-family: 'Bebas Neue';
+    border-radius: 14em;
+    position: absolute;
+    z-index: 1;
+    left: 35vh;
+    top: 25vh;
+}
+
+#toMarket span {
+    font-size: 7em;
 }
