Fixed text size

--- a/src/scenes/Home/components/Contacto/styles.css
+++ b/src/scenes/Home/components/Contacto/styles.css
@@ -2,7 +2,7 @@
     position: absolute;
     left: -1.5vw;
     width: 102.75vw;
-    font-size: 15.1em;
+    font-size: 15.5vw;
     font-family: 'Bebas Neue';
     color: white;
     text-align: center;
