--- a/src/components/ProductBanner/styles.css
+++ b/src/components/ProductBanner/styles.css
@@ -27,7 +27,7 @@
 
 .product.banner > .description {
     text-align: center;
-    font-size: 2.5em;
+    font-size: 2vw !important;
 }
 
 .product.banner .description .angle.icon {
