--- a/src/scenes/Home/components/Compra/styles.css
+++ b/src/scenes/Home/components/Compra/styles.css
@@ -1,10 +1,10 @@
 #compraHeader {
     position: absolute;
 
-    bottom: 0.285em;
+    bottom: 11vh;
     right: 0;
 
-    font-size: 26em;
+    font-size: 20vw;
     font-family: 'Bebas Neue';
 
     color: #2C4663;
@@ -12,14 +12,14 @@
 
 
 #toMarket {
-    width: 28em;
-    height: 28em;
+    width: 23vw;
+    height: 23vw;
     background-color: #E95A24;
     text-align: center;
-    line-height: 28em;
+    line-height: 23vw;
     color: white;
     font-family: 'Bebas Neue';
-    border-radius: 14em;
+    border-radius: 11.5vw;
     position: absolute;
     z-index: 1;
     left: 35vh;
@@ -27,5 +27,5 @@
 }
 
 #toMarket span {
-    font-size: 7em;
+    font-size: 7vw;
 }
