--- a/src/scenes/Home/components/Descubre/styles.css
+++ b/src/scenes/Home/components/Descubre/styles.css
@@ -1,12 +1,9 @@
 #descubreHeader {
     position: absolute;
-
-    bottom: 0.285em;
+    bottom: 10vh;
     left: 0;
-
-    font-size: 20em;
+    font-size: 18vw;
     font-family: 'Bebas Neue';
-
     color: white;
 }
 
@@ -14,23 +11,23 @@
     position: absolute;
     top: 5vh;
     right: 15vw;
-    width: 40%;
+    width: 30vw;
     height: auto;
 }
 
 #toBlog {
-    width: 28em;
-    height: 28em;
+    width: 28vw;
+    height: 28vw;
     background-color: #c1395f;
     text-align: center;
-    line-height: 28em;
+    line-height: 28vw;
     color: white;
     font-family: 'Bebas Neue';
-    border-radius: 14em;
+    border-radius: 14vw;
     position: absolute;
     z-index: 1;
-    left: 35vh;
-    top: 25vh;
+    left: 25vh;
+    top: 10vh;
 }
 
 #toBlog span {
