--- a/src/index.css
+++ b/src/index.css
@@ -21,19 +21,16 @@ body {
   font-family: MyriadPro !important;
 }
 
-.basket.container {
-  width: 7em;
-  z-index: 1;
-  position: absolute;
-  right: 0;
-  margin-right: 3em;
-  margin-top: 2em;
+.huge.header {
+    color: #2C4663;
+    font-family: 'Bebas Neue';
+    font-size: 26em;
 }
 
-#basket {
-  display: block;
-  width: 100%;
-  height: auto;
+.big.header {
+  color: #E95A24;
+  font-family: 'Bebas Neue';
+  font-size: 6em;
 }
 
 /* COLOR LIST
