--- a/src/scenes/Home/components/PideYa/styles.css
+++ b/src/scenes/Home/components/PideYa/styles.css
@@ -10,8 +10,18 @@
     right: 0;
 }
 
+#pideYaGrid {
+    margin-top: 30vh !important;
+
+}
+
 .header.wrapper {
-    max-width: 35vw;
     text-align: center;
-    top: 70%;
+    margin-right: 10vw;
+    white-space: nowrap;
+    margin-top: 7vh;
+}
+
+.header.wrapper > .big.header {
+    margin-bottom: 5vh;
 }
