--- a/src/scenes/Home/components/Compra/styles.css
+++ b/src/scenes/Home/components/Compra/styles.css
@@ -23,7 +23,7 @@
     border-radius: 11.5vw;
     position: absolute;
     z-index: 1;
-    left: 35vh;
+    left: 20vw;
     top: 25vh;
     cursor: pointer;
 }
