--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -7,19 +7,27 @@
 #footer {
     position: relative;
     background-color: white;
-    height: 41vh;
+    height: 40vh;
     width: 85vw;
     left: -50%;
     text-align: left;
 }
 
-#footer a {
+#footer-links a {
     font-size: 4.5em;
     font-family: 'Bebas Neue';
     color: #2C4663;
     display: block;
     margin-bottom: 2.5vh;
     cursor: pointer;
+}
+
+
+#footer-title{
+    margin: none;
+    font-size: 4.5em;
+    font-family: 'Bebas Neue';
+    color: #2C4663;
 }
 
 .first.column {
@@ -38,6 +46,7 @@
     letter-spacing: 4px;
 }
 
+
 .third.column span {
     font-size: 6em !important;
 }
@@ -45,3 +54,4 @@
 .third.column i {
     color: #2C4663;
 }
+
