--- a/src/scenes/Market/components/3/styles.css
+++ b/src/scenes/Market/components/3/styles.css
@@ -1,7 +1,7 @@
-#third .header {
+#marketThird .header {
     color: white;
     font-family: 'Bebas Neue Light';
-    font-size: 16vw;
+    font-size: 12vw;
     text-align: center;
     margin-top: 5vh;
 }
