--- a/src/scenes/Market/components/1/styles.css
+++ b/src/scenes/Market/components/1/styles.css
@@ -1,5 +1,5 @@
 #marketFirst .header {
-    font-size: 16vw;
+    font-size: 14vw;
     margin-top: 8vw;
     margin-left: 8vw;
     font-family: 'Bebas Neue';
@@ -7,6 +7,6 @@
     color: #2C4663;
 }
 
-#marketFirst .market.lists {
-    margin-top: 5vw;
+#marketFirst .ui.three.column.grid {
+    margin-top: 14vh;
 }
