--- a/src/index.css
+++ b/src/index.css
@@ -10,22 +10,25 @@
   src: url("fonts/MyriadPro-Light.otf") format("opentype");
 }
 
-
 @font-face {
   font-family: 'Bebas Neue Light';
   font-weight: thin;
   src: url("fonts/BebasNeue\ Regular.otf") format("opentype");
 }
 
+@font-face {
+  font-family: 'Apercu Light';
+  src: url("fonts/Apercu-Light.otf") format("opentype");
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: 'Apercu Light', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: MyriadPro !important;
   -webkit-text-size-adjust: none;
 }
 
