--- a/src/scenes/Home/components/1/components/AddressInput/styles.css
+++ b/src/scenes/Home/components/1/components/AddressInput/styles.css
@@ -6,27 +6,28 @@
 
     color: white;
     background: #2C4663;
-    width: 60%;
+    width: 50%;
 }
 
 #addressInput .header {
     font-family: 'Bebas Neue';
-    font-size: 7vw;
-    padding-top: 5vh;
-    padding-bottom: 5vh;
-    margin-left: 2vw;
+    font-size: 6vw;
+    padding-top: 8vh;
+    padding-bottom: 4vh;
+    margin-left: 3vw;
+    display: inline-block;
 }
 
 #addressInput .ui.input {
     margin-top: 0;
-    margin-left: 2vw;
+    margin-left: 3vw;
     margin-bottom: 2vh;
-    width: 80%;
+    width: 60%;
 }
 
 #addressInput input {
     height: 5vh;
-    border-radius: 6vh !important;
+    border-radius: 5vh !important;
     background: rgba(255, 255, 255, 0.7);
     border-radius: 20px;
 }
@@ -34,6 +35,13 @@
 #addressInput input::placeholder {
     color: white;
     font-size: 1.4vw;
-    padding-top: 0.5vw;
     padding-left: 2vw;
+    letter-spacing: 3px;
+    font-weight: bold;
+}
+
+#bogota-input {
+    position: absolute;
+    margin-left: 2vw;
+    width: 16vw;
 }
