--- a/src/scenes/Buy/components/1/styles.css
+++ b/src/scenes/Buy/components/1/styles.css
@@ -1,28 +1,37 @@
-#buyFirst .header {
+#buy1 .header {
     color: #D78D73;
-    font-family: 'Bebas Neue Light';
-    font-size: 12vw;
-    letter-spacing:4px;
+    font-family: 'Bebas Neue';
+    font-size: 13vw;
+    letter-spacing:2px;
     margin-left: 5vw;
-    margin-top: 5vw;
+    margin-top: 28vh;
+    margin-bottom: 0;
+}
+
+#buy1 .carrousel {
+    display: inline-block;
+    width: 58vw;
+    text-align: center;
+    margin-top: 8vh;
 }
 
 .buy-info {
     float: right;
     background: #2C4663;
-    width: 45vw;
-    height: 45vh;
+    margin-top: 3vh;
+    width: 42vw;
+    height: 52vh;
     padding: 3vw;
     color: white;
 }
 
-.buy-info p {
+.buy-info > p {
     font-size: 1.2vw;
 }
 
 .buy-info .price {
     font-family: 'Bebas Neue';
-    font-size: 3vw;
+    font-size: 3.4vw;
     margin-bottom: 2vw;
 }
 
