--- a/src/components/BasketIcon/styles.css
+++ b/src/components/BasketIcon/styles.css
@@ -3,8 +3,8 @@
     z-index: 1;
     position: absolute;
     right: 0;
-    margin-right: 3em;
-    margin-top: 2em;
+    margin-right: 5vw;
+    margin-top: 7vh;
   }
   
   #basket {
