Finish Lifestyle basic layout

--- a/src/scenes/Lifestyle/components/3/styles.css
+++ b/src/scenes/Lifestyle/components/3/styles.css
@@ -3,6 +3,7 @@
     font-family: 'Bebas Neue Light';
     font-size: 13vw;
     letter-spacing: 4px;
-    margin-top: 5vh;
+    margin-top: 2vh;
     margin-left: 5vw;
+    margin-bottom: 0;
 }
