--- a/src/components/ArticleGrid/components/ArticleBox/styles.css
+++ b/src/components/ArticleGrid/components/ArticleBox/styles.css
@@ -3,14 +3,17 @@
 }
 
 .recipe.box .thumbnail {
-    width: 95%;
+    width: 26vw;
+    height: 26vw;
+    background-size: cover;
+    margin: auto;
 }
 
 .recipe.box p {
     margin-top: 1vh;
     font-family: 'Bebas Neue';
     color: #2C4663;
-    font-size: 3vw;
+    font-size: 2.8vw;
     line-height: 1em;
     margin-left: 2vw;
     margin-right: 2vw;
