--- a/src/scenes/Lifestyle/components/6/styles.css
+++ b/src/scenes/Lifestyle/components/6/styles.css
@@ -1,37 +1,9 @@
-#sixth  h1 {
-    position: absolute;
-    top: 70vh;
-    left: 5vw;
-    color: white;
-    font-family: 'Bebas Neue Light';
-    font-size: 15vw;
+#lifestyle6 .fp-tableCell {
+    vertical-align: middle;
 }
 
-#sixth img {
-    margin-left: 0vw;
-    height: 79vh;
-}
-
-#sixth .pin {
-    top: 45%;
-    left: 20%;
-    position: absolute;
-    width: 20vw;
-    height: 20vw;
-    border-radius: 13vw;
-    background-color: white;
-    text-align: center;
-    cursor: pointer;
+#lifestyle6 .header {
     color: #2C4663;
-    font-family: 'Bebas Neue';
-}
-
-#sixth .pin .header {
-    margin-top: 10vw;
     font-size: 10vw;
-}
-
-#sixth .pin p {
-    margin-top: 3vw;
-    font-size: 5vw;
+    margin-left: 6vw;
 }
