--- a/src/scenes/Lifestyle/components/7/styles.css
+++ b/src/scenes/Lifestyle/components/7/styles.css
@@ -1,4 +1,70 @@
-#seventh {
-    vertical-align: middle;
-    color: #2C4663 !important;
+#lifestyle7 h1 {
+    font-size: 10vw;
+    color: #2C4663;
+    margin-top: 5vh;
+    margin-left: 6vw;
+}
+
+#lifestyle7 .pic-container {
+    float: left; 
+    width: 52vw;
+    margin-top: -15vh;
+    color: #2C4663;
+}
+
+#lifestyle7 .pic-container .info {
+    margin-left: 10vw;
+}
+
+#lifestyle7 .pic-container .header {
+    font-family: 'Bebas Neue';
+    font-size: 3vw;
+    padding-top: 2vw;
+}
+
+#lifestyle7 .pic-container .sub {
+    padding-top: 1.8vw;
+    font-family: 'Bebas Neue Light';
+    font-size: 2vw;
+}
+
+#lifestyle7 .pic {
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 34vw;
+    height: 32vw;
+    background-size: cover;
+}
+
+#lifestyle7 .banner {
+    position: absolute;
+    top: 28vh;
+    right: 0;
+    width: 48vw;
+    height: 60vh;
+    background-color: #2C4663;
+    color: white;
+}
+
+#lifestyle7 .banner h1 {
+    color: white;
+    margin-left: 3vw;
+    margin-top: 5vh;
+    font-size: 3.5vw;
+    letter-spacing: 1px;
+}
+
+#lifestyle7 .banner p {
+    font-size: 1.4em;
+    font-size: 1vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
+}
+
+#lifestyle7 .banner h2 {
+    margin-left: 5vw;
+    font-family: 'Bebas Neue Light';
+    font-size: 2vw;
+    color: white;
 }
