--- a/src/scenes/Lifestyle/components/3/components/RecipeCarousel/components/RecipeThumbnail/styles.css
+++ b/src/scenes/Lifestyle/components/3/components/RecipeCarousel/components/RecipeThumbnail/styles.css
@@ -3,4 +3,18 @@
     height: 30vw;
     background-size: cover;
     display: inline-block;
+    position: relative;
+}
+
+.recipe.thumbnail div:hover {
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) );
+}
+
+.recipe.thumbnail span {
+    color: white;
+    font-size: 4vw;
+    font-family: 'Bebas Neue';
+    position: absolute;
+    bottom: 2vw;
+    right: 2vw;
 }
