--- a/src/components/FullFooter/styles.css
+++ b/src/components/FullFooter/styles.css
@@ -1,10 +1,8 @@
-
-
 #full-footer > .header {
     color: #2C4663;
     font-size: 12.93vw;
     text-align: center;
-    margin-top: 50vh;
+    padding-top: 50vh;
     font-family: 'Bebas Neue Light';
 }
 
