--- a/src/scenes/Home/components/8/styles.css
+++ b/src/scenes/Home/components/8/styles.css
@@ -6,7 +6,7 @@
     font-family: 'Bebas Neue Light';
 }
 
-#domiciliario {
+#eighth #domiciliario {
     position: absolute;
     width: 35vw;
     height: auto;
