--- a/src/components/BasketIcon/styles.css
+++ b/src/components/BasketIcon/styles.css
@@ -1,14 +1,29 @@
-.basket.container {
-    width: 7em;
-    z-index: 1;
-    position: absolute;
-    right: 0;
-    margin-right: 5vw;
-    margin-top: 7vh;
-  }
-  
-  #basket {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
+.cart.container {
+  width: 7em;
+  z-index: 1;
+  position: absolute;
+  right: 0;
+  margin-right: 3vw;
+  margin-top: 10.5vh;
+}
+
+#cart {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.cart.container > .ui.label {
+  position: absolute;
+  right: 0;
+  margin-top: -2vh;
+
+  color:  white !important;
+  background-color:  #2C4663 !important;
+
+  font-size: 1em;
+
+  border-width: 1px;
+  border-color: white;
+
+}
