--- a/src/index.css
+++ b/src/index.css
@@ -65,8 +65,8 @@ a {
   text-align: center !important;
 }
 
-.navbar-scene {
-  padding-top: 6vh;
+.ibc {
+  text-align: center;
 }
 
 /* COLOR LIST
