--- a/src/index.css
+++ b/src/index.css
@@ -44,10 +44,6 @@ a {
   vertical-align: baseline;
 }
 
-.button {
-  cursor: pointer;
-}
-
 .submit.button {
   background-color: white;
   width: 5.5em !important;
@@ -65,8 +61,51 @@ a {
   text-align: center !important;
 }
 
+.button {
+  display: inline-block;
+  cursor: pointer;
+
+  background-color: #2C4663;
+
+  font-family: 'Bebas Neue';
+  color: white;
+}
+
+.big.button {
+  padding-left: 2vw;
+  padding-right: 2vw;
+
+  font-size: 3vw;
+  letter-spacing: 5px;
+
+  height: 10vh;
+  line-height: 10vh;
+
+  border-radius: 10vh;
+}
+
+.huge.button {
+  padding-left: 3vw;
+  padding-right: 3vw;
+
+  font-size: 4vw;
+  letter-spacing: 5px;
+
+  height: 14vh;
+  line-height: 15vh;
+  border-radius: 14vh;
+}
+
 .ibc {
   text-align: center;
+}
+
+.ui.dropdown {
+  border: 1px solid #2C4663 !important;
+  border-radius: 0 !important;
+  color: #2C4663 !important;
+
+  font-size: 1vw;
 }
 
 /* COLOR LIST
