--- a/src/scenes/Profile/components/OrderBox/styles.css
+++ b/src/scenes/Profile/components/OrderBox/styles.css
@@ -1,6 +1,7 @@
 .order-box {
     margin-left: 5vw;
     margin-right: 5vw;
+    color: #2C4663;
 }
 
 .order-box a {
@@ -16,6 +17,8 @@
     padding-bottom: 5vh;
 
     border: 4px solid #2C4663;
+
+    background-color: white;
 }
 
 .order-container .date {
