--- a/src/scenes/FAQ/styles.css
+++ b/src/scenes/FAQ/styles.css
@@ -1,21 +1,55 @@
+.container {
+    padding-left: 12vw;
+    padding-right: 12vw;
+}
+
 #faq p {
     font-size: 1.3em;
     margin-bottom: 4vh;
 }
 
-#faq h1 {
+#faq-container h1 {
     margin-top: 10vh;
     color: #2C4663;
     font-size: 10vw;
     text-align: center;
 }
 
-#faq-container {
-    margin-left: 15vw;
-    margin-right: 15vw;
-}
-
 #faq-container h3 {
     color: #2C4663;
     font-size: 3vw;
+}
+
+#contact-container {
+    background-color: #2C4663;
+    color: white;
+}
+
+#contact-container h1 {
+    font-size: 8vw;
+}
+
+
+#contact-container .ui.input > input {
+    border-radius: 0;
+    width:  20vw;
+}
+
+#contact-container .six.wide.column {
+    display: table; 
+    height: 7vh;
+    text-align: right;
+    padding-right: 0;
+}
+
+#contact-container .ten.wide.column {
+    text-align: left;
+}
+
+#contact-container label {
+    display: table-cell;
+    vertical-align: middle;
+    color: white;
+    font-family: 'Bebas Neue Light';
+    font-size: 1.5vw;
 }
