New Market page

--- a/src/components/SidebarIcon/styles.css
+++ b/src/components/SidebarIcon/styles.css
@@ -2,17 +2,18 @@
   width: 7em;
   z-index: 1;
   position: absolute;
-  left: 3vw;
-  margin-top: 11.5vh;
+  left: 2vw;
+  margin-top: 7em;
 }
   
 #sidebar-icon {
   display: block;
   width: 100%;
-  height: auto;
+  height: 1em;
   color: #2C4663;
   cursor: pointer;
   font-weight: bold;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: white;
+  font-size: 5em;
 }
