--- a/src/scenes/Market/components/1/styles.css
+++ b/src/scenes/Market/components/1/styles.css
@@ -1,4 +1,4 @@
-#marketFirst .header {
+#marketFirst .page-title {
     font-size: 14vw;
     margin-top: 8vw;
     margin-left: 8vw;
@@ -7,6 +7,19 @@
     color: #2C4663;
 }
 
-#marketFirst .ui.three.column.grid {
-    margin-top: 14vh;
+#marketFirst .query {
+    margin-top: 7vw;
+    text-align: center;
+}
+
+#marketFirst .query .ui.search input {
+    width: 60vw;
+    height: auto;
+    font-size: 2em;
+    background-color: #7D9EAF;
+    color: #275D7A;
+}
+
+#marketFirst .query .ui.grid {
+    margin-top: 3vh;
 }
