--- a/src/scenes/Market/components/2/styles.css
+++ b/src/scenes/Market/components/2/styles.css
@@ -1,13 +1,11 @@
-#marketSecond {
+#marketSecond .fp-tableCell {
     vertical-align: middle;
 }
 
-#marketSecond .fp-tableCell {
-    vertical-align: baseline;
-}
-
-#marketSecond .ui.three.column.grid {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+#marketSecond .page-header {
+    color: #E03660;
+    font-family: 'Bebas Neue';
+    font-size: 14vw;
+    text-align: center;
+    margin-top: 5vh;
 }
