--- a/src/scenes/Market/components/4/styles.css
+++ b/src/scenes/Market/components/4/styles.css
@@ -1,63 +1,12 @@
-#market4 > .fp-tableCell > .header {
+#marketFourth .header {
     color: #2C4663;
-    font-size: 12.93vw;
-    text-align: center;
-    margin-top: 50vh;
     font-family: 'Bebas Neue Light';
+    font-size: 8vw;
+    letter-spacing: 0.8vw;
+    margin-top: 3vh;
+    margin-left: 9vw;
 }
 
-#market4 #domiciliario {
-    position: absolute;
-    width: 35vw;
-    height: auto;
-    top: -10vh;
-    right: 10vw;
-}
-
-#market4 .pin {
-    position: absolute;
-    width: 16vw;
-    height: 16vw;
-    text-align: center;
-    line-height: 17vw;
-    top: 20vh;
-    left: 35vw;
-    border-radius: 8vw;
-    background: #2C4663;
-    color: white;
-}
-
-#market4 .pin .header {
-    font-size: 5vw;
-    font-family: 'Bebas Neue'
-}
-
-@media only screen and (max-width: 1400px) {
-    #market4 #PPT {
-        font-size: 15.3vw !important;
-    }
-
-    #market4 .header {
-        font-size: 5vw !important;
-    }
-    
-    #market4 #domiciliario {
-        position: absolute;
-        width: 30vw !important;
-        height: auto;
-        top: -10vh;
-        right: 10vw;
-    }
-
-    #market4 > .fp-tableCell > .header {
-        margin-top: 40vh !important;
-        font-family: 'Bebas Neue Light';
-    }
-    
-    
-    #market4 .pin {
-        top: 12vh !important;
-    }
-
-
+#marketFourth .ui.container {
+    display: block;
 }
