--- a/src/components/ArticleGrid/components/ArticleBox/styles.css
+++ b/src/components/ArticleGrid/components/ArticleBox/styles.css
@@ -18,3 +18,20 @@
     margin-left: 2vw;
     margin-right: 2vw;
 }
+
+@media screen and (max-width:  1224px) {    
+    .article.box .thumbnail {
+        width: 22vh;
+        height: 22vh;
+    }
+
+    .article.box p {
+        margin-top: 1vh;
+        font-family: 'Bebas Neue';
+        color: #2C4663;
+        font-size: 2.5vh;
+        line-height: 1em;
+        margin-left: 2vw;
+        margin-right: 2vw;
+    }
+}
