--- a/src/components/FullFooter/styles.css
+++ b/src/components/FullFooter/styles.css
@@ -1,5 +1,6 @@
 #full-footer { 
-    position: absolute;
+    display: block;
+    position: relative;
     bottom: 0;
 }
 
@@ -71,7 +72,7 @@
     }
 
     #full-footer .pin {
-        position: absolute;
+        position: absolute; 
         width: 24vw;
         height: 24vw;
         text-align: center;
@@ -85,9 +86,10 @@
 
     #full-footer #domiciliario {
         position: absolute;
-        top: 20vh;
+        z-index: 0;
         width: 50vw !important;
         height: auto;
+        top: 15vh;
         right: 25vw;
     }
 
