--- a/src/components/PurchaseGrid/components/NetPrice/styles.css
+++ b/src/components/PurchaseGrid/components/NetPrice/styles.css
@@ -22,3 +22,17 @@
     line-height: 2.8vw;
     border-radius: 2.5vw;
 }
+
+@media screen and (max-width: 1224px) {
+    .np-wrapper { margin-right: 8vw; }
+
+    .np-wrapper span { 
+        font-size: 6vw;
+    }
+
+    .np-wrapper .net {
+        height: 7vw;
+        line-height: 7.5vw;
+        border-radius: 3.5vw;
+    }
+}
