--- a/src/components/PurchaseGrid/styles.css
+++ b/src/components/PurchaseGrid/styles.css
@@ -38,3 +38,23 @@
     font-size: 2vw;
     letter-spacing: 3px;
 }
+
+
+@media screen and (max-width: 1224px) {
+    .purchase-grid h2 {
+        font-size: 5vw;
+        letter-spacing: 3px;
+    }
+
+    .purchase-grid .description {
+        font-size: 4vw;
+        letter-spacing: 1px;
+    }
+
+    .purchase-grid .price {
+        font-size: 4vw;
+        letter-spacing: 2px;
+    }
+
+    .purchase-grid img { margin-left: 5vw; }
+}
