--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,37 @@ a {
 @media screen and (max-width: 1224px) {
   #home-logo {
     margin-top: 5vh;
-    width: 45%;
+    width: 25vh;
+  }
+
+  .huge.button {
+    padding-left: 3vw;
+    padding-right: 3vw;
+  
+    font-size: 8vw;
+    letter-spacing: 4px;
+  
+    height: 10vh;
+    line-height: 10.5vh;
+    border-radius: 10vh;
+  }
+
+  .outline.button {
+    width: 45vw;
+    font-size: 4.5vw;
+    letter-spacing: 1px;
+    padding-top: 3vw;
+  }
+
+  .big.button {
+    padding-left: 5vw;
+    padding-right: 5vw;
+  
+    font-size: 6vw;
+    letter-spacing: 4px;
+  
+    height: 8vh;
+    line-height: 8vh;
+    border-radius: 4vh;
   }
 }
