--- a/src/scenes/mobile/Home/components/1/styles.css
+++ b/src/scenes/mobile/Home/components/1/styles.css
@@ -6,7 +6,7 @@
     #homeFirst h1 {
         margin-top: 5vh;
 
-        font-size: 16vw;
+        font-size: 8vh;
         letter-spacing: 4px;
         color: #2C4663;
     }
