--- a/src/scenes/pc/Checkout/styles.css
+++ b/src/scenes/pc/Checkout/styles.css
@@ -52,3 +52,47 @@
 #checkout-container .ui.dropdown {
     width: 20vw;
 }
+
+@media screen and (max-width: 1224px) {
+    #checkout h1 {
+        margin-top: 10vh;
+        margin-bottom: 5vh;
+        letter-spacing: 2px;
+        color: #2C4663;
+    }
+
+    #checkout-container {
+        margin-left: 8vw;
+        margin-right: 8vw;
+        padding: 5vw;
+        border: 2px solid #2C4663;
+        text-align: center;
+    }
+
+    #checkout-container h3 {
+        font-size: 6vw;
+        letter-spacing: 2px;
+    }
+
+    #checkout-container h3{
+        margin-bottom: 2vh;
+    }
+
+    #checkout-container h5 { font-size: 5vw; }
+
+    #checkout-summary {
+        margin: 0;
+        margin-top: 5vh;
+        padding: 2vw;
+        border: 0px solid white;
+    }
+
+    #checkout-container .ui.dropdown {
+        font-size: 4vw;
+        width: 70vw;
+    }
+
+    #checkout-container label {
+        font-size: 5vw;
+    }
+}
